--- a/css/styles.css
+++ b/css/styles.css
@@ -10,24 +10,26 @@ body {
     line-height: 1.5;
     margin: 0;
     padding: 0;
-    background-color: #32CF57;
+    background-color: #eeb777;
 }
 
 header {
     text-align: center;
-    background-color: #FFEA00;
+    color: azure;
+    background-color: #13226d;
     padding: 5px 0;
     line-height: 0.7;
 }
 .header {
     text-align: center;
-    background-color: #FFEA00;
+    color: azure;
+    background-color: #13226d;
     padding: 25px 0;
     line-height: 0.7;
 }
 nav {
     text-align: center;
-    background-color: #FF0000;
+    background-color: #4e8cc7;
     padding: 5px 0;
     line-height: 0.7;
 }
@@ -38,8 +40,9 @@ nav {
 }
 
 img {
-    border: 2px solid black;
-    border-radius: 17px;
+    border: 7px solid black;
+    border-radius: 32px;
+    box-shadow: 10px 10px 15px rgb(0, 0, 0);
 }
 
 #month-container {
@@ -52,4 +55,13 @@ img {
 #month-container:hover {
     scale: 1;
     transition: scale 1s;
+}
+
+.HeaderIcon {
+    scale: 1;
+    border: 0px solid black;
+    border-radius: 0px;
+    box-shadow: 0px 0px 0px rgb(0, 0, 0);
+    padding: 0px;
+    margin: 0px;
 }
